Updated German Language File Fixed Webmail Layout issue
git-svn-id: https://i-mscp.svn.sourceforge.net/svnroot/i-mscp/trunk@1106 15a38060-5cfe-4f5c-bf9d-b5d42b1378a7

--- a/gui/tools/webmail/themes/css/omega.css
+++ b/gui/tools/webmail/themes/css/omega.css
@@ -223,13 +223,13 @@ frame {
 }
 
 #container fieldset {
-	width: 200px;
+	width: 250px;
 	margin: 0 auto auto 190px;
 	text-align: right;
 	border: none;
 	position: absolute;
 	top: 100px;
-	left: 20px;
+	right: 30px;
 }
 
 #container p.login {
